--- a/public/index.html
+++ b/public/index.html
@@ -34,13 +34,19 @@
         }
 
         h1 {
-            text-align: left;
             font-size: 2.5rem;
             margin-bottom: 20px;
             color: #ff66cc;
             font-family: 'Courier New', Courier, monospace;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
             position: relative;
+            text-align: center;
+            animation: fadeEffect 2s infinite alternate;
+        }
+
+        @keyframes fadeEffect {
+            from { opacity: 1; }
+            to { opacity: 0.7; }
         }
 
         h1::after {
@@ -49,7 +55,13 @@
             font-size: 1rem;
             color: #ffccff;
             margin-top: 5px;
-            text-align: left;
+            text-align: center;
+        }
+
+        #chat-container h1::after a {
+            color: #ff66cc;
+            text-decoration: none;
+            font-size: 1rem;
         }
 
         #chat-box {
@@ -63,7 +75,7 @@
         }
 
         #user-input {
-            width: 100%;
+            width: calc(100% - 100px);
             padding: 12px;
             border: 2px solid #ff66cc;
             border-radius: 5px;
@@ -111,7 +123,14 @@
 </head>
 <body>
     <div id="chat-container" class="container">
-        <h1>Chat with VnkyAI</h1>
+        <h1>
+            Chat with VnkyAI
+            <div style="font-size: 1rem; color: #ffccff; margin-top: 5px;">
+                Developed by Vinay Kumar Yadav
+                <br />
+                <a href="https://www.linkedin.com/in/vinay-kumar-yadav-49571a28b/" target="_blank">LinkedIn</a>
+            </div>
+        </h1>
         <div id="chat-box" class="mb-3"></div>
         <div class="input-group">
             <input type="text" id="user-input" class="form-control" placeholder="Type your message here...">
@@ -163,7 +182,14 @@
 
             return (
                 <div id="chat-container">
-                    <h1>Chat with VnkyAI</h1>
+                    <h1>
+                        Chat with VnkyAI
+                        <div style={{ fontSize: '1rem', color: '#ffccff', marginTop: '5px' }}>
+                            Developed by Vinay Kumar Yadav
+                            <br />
+                            <a href="https://www.linkedin.com/in/vinay-kumar-yadav-49571a28b/" target="_blank" style={{ color: '#ff66cc' }}>LinkedIn</a>
+                        </div>
+                    </h1>
                     <div id="chat-box" className="mb-3">
                         {messages.map((msg, index) => (
                             <div key={index} className={msg.sender === 'user' ? 'user' : 'ai'}>
