--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
             background-size: cover;
             background-position: center;
             height: 100vh;
-            color: #fff;
             animation: backgroundAnimation 20s infinite alternate;
+            transition: background-color 0.3s; /* Smooth transition */
         }
 
         @keyframes backgroundAnimation {
@@ -27,41 +27,29 @@
         #chat-container {
             max-width: 800px;
             margin: 50px auto;
-            background: rgba(0, 0, 0, 0.85);
+            background: rgba(30, 30, 30, 0.85);
             border-radius: 15px;
             padding: 20px;
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.6);
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 1);
+            position: relative; /* Added for positioning toggle button */
+        }
+
+        .toggle-button {
+            position: absolute; /* Positioning the toggle button */
+            top: 10px; /* Adjust to your preference */
+            right: 20px; /* Adjust to your preference */
+            font-size: 1.5rem; /* Size of the emoji */
+            background: transparent;
+            border: none;
+            cursor: pointer;
+            z-index: 1; /* Ensure the button is above other elements */
         }
 
         h1 {
             font-size: 2.5rem;
             margin-bottom: 20px;
-            color: #ff66cc;
-            font-family: 'Courier New', Courier, monospace;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
-            position: relative;
             text-align: center;
-            animation: fadeEffect 2s infinite alternate;
-        }
-
-        @keyframes fadeEffect {
-            from { opacity: 1; }
-            to { opacity: 0.7; }
-        }
-
-        h1::after {
-            content: 'Developed by Vinay Kumar Yadav';
-            display: block;
-            font-size: 1rem;
-            color: #ffccff;
-            margin-top: 5px;
-            text-align: center;
-        }
-
-        #chat-container h1::after a {
-            color: #ff66cc;
-            text-decoration: none;
-            font-size: 1rem;
+            overflow: hidden; /* Prevents shaking */
         }
 
         #chat-box {
@@ -71,84 +59,109 @@
             margin-bottom: 20px;
             background: rgba(255, 255, 255, 0.1);
             border-radius: 8px;
-            box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.2);
+        }
+
+        .message {
+            margin-bottom: 10px; /* Space between messages */
+            padding: 10px;
+            border-radius: 15px;
+        }
+
+        .user {
+            text-align: right;
+            background: rgba(255, 102, 204, 0.3);
+        }
+
+        .ai {
+            text-align: left;
+            background: rgba(0, 255, 153, 0.3);
         }
 
         #user-input {
             width: calc(100% - 100px);
             padding: 12px;
-            border: 2px solid #ff66cc;
             border-radius: 5px;
-            outline: none;
-            color: #000;
-            background-color: #f9f9f9;
+            border: 2px solid blue; /* Blue outline */
         }
 
         #send-button {
-            padding: 12px 20px;
-            border: none;
             border-radius: 5px;
-            background-color: #ff66cc;
-            color: white;
-            cursor: pointer;
-            transition: background-color 0.3s, transform 0.2s;
-            font-weight: bold;
+            background-color: #ff66cc; 
+            color: white; 
         }
 
         #send-button:hover {
-            background-color: #ff33bb;
-            transform: scale(1.1);
+            background-color: #ff33bb; 
         }
 
-        #chat-box .user {
-            text-align: right;
-            color: #ffccff;
-            background: rgba(255, 102, 204, 0.3);
-            margin: 5px 0;
-            padding: 10px;
-            border-radius: 15px;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        .footer {
+            text-align: center; 
+            margin-top: 10px; 
+            font-size: .9rem; 
         }
 
-        #chat-box .ai {
-            text-align: left;
-            color: #a3ffcc;
-            background: rgba(0, 255, 153, 0.3);
-            margin: 5px 0;
-            padding: 10px;
-            border-radius: 15px;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        /* Light mode styles */
+        .light-mode {
+            background-color: #f0f0f0;
+            color: #000; /* Text color for light mode */
+        }
+
+        .light-mode #chat-container {
+            background: rgba(255, 255, 255, 0.9); /* Light chat container */
+        }
+
+        .light-mode h1, 
+        .light-mode .user, 
+        .light-mode .ai {
+            color: black; /* Text color for light mode */
+        }
+
+        /* Dark mode styles */
+        .dark-mode {
+            background-color: #303030;
+            color: #fff; /* Default text color for dark mode */
+        }
+
+        .dark-mode #chat-container {
+            background: rgba(30, 30, 30, 0.85);
+        }
+
+        .dark-mode h1, 
+        .dark-mode .user, 
+        .dark-mode .ai {
+            color: pink; /* Text color for dark mode */
         }
     </style>
 </head>
-<body>
+<body class="dark-mode"> <!-- Set default to dark mode -->
     <div id="chat-container" class="container">
-        <h1>
-            Chat with VnkyAI
-            <div style="font-size: 1rem; color: #ffccff; margin-top: 5px;">
-                Developed by Vinay Kumar Yadav
-                <br />
-                <a href="https://www.linkedin.com/in/vinay-kumar-yadav-49571a28b/" target="_blank">LinkedIn</a>
-            </div>
-        </h1>
+        <button id="toggle-button" class="toggle-button" onClick="toggleMode()">🌙</button> <!-- Dynamic emoji button -->
+        <h1 id="typing-effect"></h1>
         <div id="chat-box" class="mb-3"></div>
         <div class="input-group">
             <input type="text" id="user-input" class="form-control" placeholder="Type your message here...">
             <div class="input-group-append">
-                <button id="send-button" class="btn">Send</button>
+                <button id="send-button" class="btn" onClick="sendMessage()">
+                    Send
+                </button>
             </div>
+        </div>
+        <div class="footer">
+          Developed by Vinay Kumar Yadav<br />
+          <a href="https://www.linkedin.com/in/vinay-kumar-yadav-49571a28b/" target="_blank" style="color:#ff66cc;">LinkedIn</a>
         </div>
     </div>
 
     <!-- React and Babel CDN -->
-    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <script type="text/babel">
         function ChatApp() {
             const [messages, setMessages] = React.useState([]);
             const [userInput, setUserInput] = React.useState("");
+            const [isDarkMode, setIsDarkMode] = React.useState(true);
 
             const sendMessage = async () => {
                 if (!userInput.trim()) return;
@@ -163,38 +176,41 @@
                         body: JSON.stringify({ message: userInput }),
                     });
                     const data = await response.json();
-                    const aiMessage = { sender: 'ai', text: data.reply };
+                    const aiMessage = { sender: 'ai', text: data.reply || 'VnkyAI did not return a valid response.' }; // Handle undefined reply
                     setMessages((prevMessages) => [...prevMessages, aiMessage]);
                 } catch (error) {
                     console.error('Error:', error);
                     setMessages((prevMessages) => [
                         ...prevMessages,
-                        { sender: 'ai', text: 'VnkyAI: Sorry, I could not respond.' },
+                        { sender: 'ai', text: 'VnkyAI could not respond.' },
                     ]);
                 }
 
                 setUserInput("");
+                document.getElementById("chat-box").scrollTop = document.getElementById("chat-box").scrollHeight; // Scroll to bottom
             };
 
             const handleEnterPress = (e) => {
                 if (e.key === 'Enter') sendMessage();
             };
 
+            const toggleMode = () => {
+                setIsDarkMode(!isDarkMode);
+                document.body.classList.toggle("light-mode", !isDarkMode);
+                document.body.classList.toggle("dark-mode", isDarkMode);
+                document.getElementById("toggle-button").innerText = isDarkMode ? "🌙" : "☀️"; // Change emoji based on mode
+            };
+
             return (
-                <div id="chat-container">
-                    <h1>
-                        Chat with VnkyAI
-                        <div style={{ fontSize: '1rem', color: '#ffccff', marginTop: '5px' }}>
-                            Developed by Vinay Kumar Yadav
-                            <br />
-                            <a href="https://www.linkedin.com/in/vinay-kumar-yadav-49571a28b/" target="_blank" style={{ color: '#ff66cc' }}>LinkedIn</a>
-                        </div>
-                    </h1>
+                <div id="chat-container" className={`container ${isDarkMode ? 'dark-mode' : 'light-mode'}`}>
+                    <button id="toggle-button" className="toggle-button" onClick={toggleMode}>
+                        {isDarkMode ? "🌙" : "☀️"} {/* Dynamic emoji button */}
+                    </button>
+                    <h1 id="typing-effect"></h1>
                     <div id="chat-box" className="mb-3">
                         {messages.map((msg, index) => (
-                            <div key={index} className={msg.sender === 'user' ? 'user' : 'ai'}>
-                                {msg.sender === 'user' ? 'You: ' : 'VnkyAI: '}
-                                {msg.text}
+                            <div key={index} className={`message ${msg.sender}`}>
+                                {msg.sender === 'user' ? 'You:' : 'VnkyAI:'} {msg.text}
                             </div>
                         ))}
                     </div>
@@ -214,11 +230,48 @@
                             </button>
                         </div>
                     </div>
+                    <div className="footer">
+                      Developed by Vinay Kumar Yadav<br />
+                      <a href="https://www.linkedin.com/in/vinay-kumar-yadav-49571a28b/" target="_blank" style={{ color:'#ff66cc' }}>LinkedIn</a>
+                    </div>
                 </div>
             );
         }
 
         ReactDOM.render(<ChatApp />, document.getElementById('chat-container'));
+
+        // Typing effect for "Chat with VnkyAI!"
+        const typingEffect = (text) => {
+            let index = 0;
+            let direction = true; // true for typing forward
+            const pauseDuration = 1000; // Pause duration after complete text
+            const element = document.getElementById("typing-effect");
+
+            const type = () => {
+                if (direction) {
+                    element.innerText += text[index++];
+                    if (index === text.length) {
+                        direction = false; // Start erasing
+                        setTimeout(type, pauseDuration); // Pause before erasing
+                    } else {
+                        setTimeout(type, 100); // Typing speed
+                    }
+                } else {
+                    element.innerText = element.innerText.slice(0, -1);
+                    if (element.innerText.length === 0) {
+                        direction = true; // Start typing again
+                        index = 0; // Reset index for typing
+                        setTimeout(() => type(), pauseDuration); // Pause before typing again
+                    } else {
+                        setTimeout(type, 100); // Erasing speed
+                    }
+                }
+            };
+
+            type();
+        };
+
+        typingEffect("Chat with VnkyAI!"); // Updated text with an exclamation mark
     </script>
 </body>
 </html>
